Bug 99639 - [SKL] Local display flicking at login screen
Summary: [SKL] Local display flicking at login screen
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-02 09:19 UTC by Shawn Lee
Modified: 2018-04-02 16:29 UTC (History)
2 users (show)

See Also:
i915 platform: SKL
i915 features: display/PSR


Attachments
display flicker log (67.93 KB, text/plain)
2017-02-02 09:23 UTC, Shawn Lee
no flags Details
display flicking full log (121.00 KB, text/plain)
2017-02-03 02:00 UTC, Shawn Lee
no flags Details
display flicker on Linux version 4.11.0-rc5-01021-ge461ecfd413f-dirty (162.87 KB, text/plain)
2017-04-24 07:34 UTC, Shawn Lee
no flags Details
LFP flicker on Linux version 4.11.0-rc7-00396-g871eda388926-dirty + 1 kernel patch (https://patchwork.freedesktop.org/patch/147942/). (182.82 KB, text/plain)
2017-04-25 10:00 UTC, Shawn Lee
no flags Details
LFP flicker with below combination. (158.75 KB, text/plain)
2017-04-26 05:43 UTC, Shawn Lee
no flags Details
LFP flicker (at 00:06) when DUT start up. (17.87 MB, video/quicktime)
2017-04-26 05:47 UTC, Shawn Lee
no flags Details

Description Shawn Lee 2017-02-02 09:19:07 UTC
What steps will reproduce the problem?
Return to login screen

What is the expected result?
No flickering

What happens instead?
Screen flickers when enter login screen
Comment 1 Shawn Lee 2017-02-02 09:23:02 UTC
Created attachment 129287 [details]
display flicker log
Comment 2 Shawn Lee 2017-02-02 09:26:23 UTC
Per panel vendor's comment. This symptom was happened during FLT when PSR exit. In this moment. If driver try to read DPCD register 0x202, 0x203 & 0x204.  Due to FLT is ongoing, TCON will report EQ & symbol lost. We have to wait 1000us at least before FLT complete.
Comment 3 yann 2017-02-02 10:08:36 UTC
Reference to Shawn Lee's patch: https://patchwork.freedesktop.org/series/18982/
Comment 4 Jani Nikula 2017-02-02 10:58:07 UTC
(In reply to Shawn Lee from comment #1)
> Created attachment 129287 [details]
> display flicker log

"localhost ~ # dmesg | grep drm"

Please always attach full dmesgs.
Comment 5 Shawn Lee 2017-02-03 02:00:48 UTC
Created attachment 129309 [details]
display flicking full log
Comment 6 yann 2017-03-02 08:14:57 UTC
Reference to Shawn Lee's patch: https://patchwork.freedesktop.org/series/18982/
Comment 7 Jari Tahvanainen 2017-04-11 11:11:54 UTC
Hello Lee, Did you check if https://patchwork.freedesktop.org/patch/147942/ on top of the latest drm-tip helps?
Comment 8 Jim Bride 2017-04-20 16:22:03 UTC
Have you tried to reproduce this on drm-tip?  How about with the patch I suggested (linked in #7)?
Comment 9 Shawn Lee 2017-04-24 07:34:37 UTC
Created attachment 130995 [details]
display flicker on Linux version 4.11.0-rc5-01021-ge461ecfd413f-dirty

display flicker on "Linux version 4.11.0-rc5-01021-ge461ecfd413f-dirty"
Comment 10 Shawn Lee 2017-04-24 07:39:44 UTC
Setup 2 DUTs and replicate this issue on cros + kernel 4.11.0-rc5-01021-ge461ecfd413f-dirty. Below are the reproduce rate.

DUT1 : 286/665 (~43%).
DUT2 : 4000/8450 (~47%).

It is more easily to replicate this symptom with latest upstream.

Log is attached.
Comment 11 Shawn Lee 2017-04-25 09:57:53 UTC
Setup 1 DUT and replicate this issue on cros + kernel 4.11.0-rc7-00396-ga56d3f2523cd-dirty + 1 kernel patch (https://patchwork.freedesktop.org/patch/147942/). Issue still can be replicated and reproduce rate is about 18% (18/100).
Comment 12 Shawn Lee 2017-04-25 10:00:36 UTC
Created attachment 131019 [details]
LFP flicker on Linux version 4.11.0-rc7-00396-g871eda388926-dirty + 1 kernel patch (https://patchwork.freedesktop.org/patch/147942/).
Comment 13 Shawn Lee 2017-04-26 05:43:54 UTC
Created attachment 131035 [details]
LFP flicker with below combination.

kernel 4.11.0-rc7-00396-g871eda388926-dirty + 
https://patchwork.freedesktop.org/patch/147942/ +
patch from Jim (drm/i915/edp: Be less aggressive about changing link config on eDP).
Comment 14 Shawn Lee 2017-04-26 05:47:50 UTC
Created attachment 131036 [details]
LFP flicker (at 00:06) when DUT start up.
Comment 15 Elizabeth 2017-06-27 21:33:40 UTC
(In reply to Shawn Lee from comment #14)
> Created attachment 131036 [details]
> LFP flicker (at 00:06) when DUT start up.

Changing to REOPEN since reporter attached the information.
Comment 16 Elizabeth 2017-07-06 20:24:58 UTC
Adding tag into "Whiteboard" field - ReadyForDev
*Status is correct
*Platform is included
*Feature is included
*Priority and Severity correctly set
*Logs included
Comment 17 Elizabeth 2017-10-20 20:31:09 UTC
Hello everybody, any update in this case? Thank you.
Comment 18 Jani Saarinen 2018-03-29 07:10:29 UTC
First of all. Sorry about spam.
This is mass update for our bugs. 

Sorry if you feel this annoying but with this trying to understand if bug still valid or not.
If bug investigation still in progress, please ignore this and I apologize!

If you think this is not anymore valid, please comment to the bug that can be closed.
If you haven't tested with our latest pre-upstream tree(drm-tip), can you do that also to see if issue is valid there still and if you cannot see issue there, please comment to the bug.
Comment 19 Shawn Lee 2018-04-02 07:58:56 UTC
Issue can't be reproduce after system software upgrade. Let's close this bug. Thanks for help!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.